@@ -46,6 +46,18 @@ def _negotiate(context, target_language):
         return target_language
     return negotiate(context)
 
+def _escape(s, quote=0):
+    """Replace special characters '&', '<' and '>' by SGML entities."""
+    if '&' in s:
+        s = s.replace("&", "&amp;") # Must be done first!
+    if '<' in s:
+        s = s.replace("<", "&lt;")
+    if '>' in s:
+        s = s.replace(">", "&gt;")
+    if quote:
+        s = s.replace('"', "&quot;")
+    return s
+
 def initialize_i18n():
     if DISABLE_I18N:
         return (None, _fake_negotiate, _fake_translate)
@@ -55,7 +67,7 @@ def initialize_tal():
     return ({}, utils.repeatdict())
 
 def initialize_helpers():
-    return (cgi.escape, object())
+    return (_escape, object())
 
 def initialize_stream():
     out = BufferIO()
